--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "express": "^4.19.2",
     "mongodb": "^6.8.1",
+    "node": "^22.8.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
